--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "flp-processor",
   "version": "0.1.0-a",
   "description": "processes FL Studio project files",
-  "main": "index.js",
+  "main": "./lib/index.js",
+  "module": "./lib/index.js",
+  "types": "./lib/index.d.ts",
+  "files": ["./lib"],
   "scripts": {
+    "build": "rm -f ./lib/** && npx tsc && npm pack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
