--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flp-processor",
-  "version": "0.1.0-b",
+  "version": "0.1.0-c",
   "description": "processes FL Studio project files",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
