--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flp-file",
-  "version": "0.3.0-a",
+  "version": "0.3.0-b",
   "description": "processes FL Studio project files",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
