CHANGED all classes now translate their own data

--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "array-buffer-stream": "file:../array-buffer-stream/array-buffer-stream-0.2.0-a.tgz"
+    "array-buffer-stream": "file:../array-buffer-stream/array-buffer-stream-0.2.0-b.tgz"
   }
 }
