--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "./lib/index.js",
   "module": "./lib/index.js",
   "types": "./lib/index.d.ts",
-  "files": ["./lib"],
+  "files": [
+    "./lib"
+  ],
   "scripts": {
     "build": "rm -f ./lib/** && npx tsc && npm pack",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,6 +22,6 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "array-buffer-stream": "file:../array-buffer-stream/array-buffer-stream-0.2.0-b.tgz"
+    "@holzchopf/array-buffer-stream": "^1.0.1"
   }
 }
